tests/typechecker/should_fail/dot_operator_no_partially_applied_3.csp
datatype A = B.{0..1} | X.{0..1}.{0..1}
channel e : Bool.A.Bool

test9 = e?x : {true.B.0}?y -> test9'(x,y)
test9'(x,y) = e.x.y -> STOP


